# afterEffectsCMake

./: CMakeLists.txt  README.md  Skeleton.cpp  SkeletonPiPL.r
